// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Componente Card renderiza contenido hijo correctamente 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="card-header"
    >
      <h2
        class="card-title"
      >
        Tarjeta con hijos
      </h2>
    </div>
    <div
      class="card-content"
    >
      <p>
        Este es un párrafo dentro de la tarjeta
      </p>
      <button>
        Un botón
      </button>
    </div>
  </div>
</div>
`;

exports[`Componente Card renderiza correctamente con props básicas 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="card-header"
    >
      <h2
        class="card-title"
      >
        Título de tarjeta
      </h2>
      <h3
        class="card-subtitle"
      >
        Subtítulo opcional
      </h3>
    </div>
    <div
      class="card-image"
    >
      <img
        alt="Título de tarjeta"
        src="/path/to/image.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`Componente Card renderiza correctamente sin imagen 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="card-header"
    >
      <h2
        class="card-title"
      >
        Solo título
      </h2>
    </div>
  </div>
</div>
`;
